fix broken styles since refactoring/implementation of sorting
git-svn-id: https://dev.cedis.fu-berlin.de/svn/eaz/zwar_archive/trunk@3496 34bfa2f4-0c52-0410-afca-732f319d8f5a

--- a/public/stylesheets/user-content.css
+++ b/public/stylesheets/user-content.css
@@ -573,7 +573,7 @@ body .teaserList .save_user_content {
 }
 
 #baseContainerRight #tag-filters-toggle {
-    margin-top: 38px;
+    margin-top: 30px;
 }
 
 #baseContainerRight #tag-filters-toggle h2 a,
@@ -611,7 +611,8 @@ body .teaserList .save_user_content {
 }
 
 /* modal topics dialog */
-.edit .hint {
+.edit .hint,
+.container .hint {
     margin: 10px;
     font-size: 85%;
     /* font-weight: bold; */
